# aish

./: .env.example  .gitignore  .mcp.json  ANTHROPIC-PLUGIN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  codeql.yml
agents/: gpu-operator.md  ml-env-setup.md
aish_mcp/: __init__.py  _logging.py  _redact.py  modal_mcp_server.py  tensordock_mcp_server.py
commands/: aish-deploy-gpu.md  aish-hf-setup.md  aish-modal-run.md  aish-status.md
docs/: PRIOR-ART.md  SUBMISSION.md
mcp/: _redact.py  _validation.py  modal_mcp_server.py  tensordock_mcp_server.py
scripts/: audit.sh  test.sh
skills/gpu-detect/: SKILL.md  detect.py
skills/hf-env-setup/: SKILL.md
tests/: conftest.py  test_modal.py  test_no_shell_true.py  test_redact.py  test_tensordock.py  test_tools_smoke.py  test_validation.py
