[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aish"
version = "0.1.0"
description = "Claude Code plugin: GPU cloud MCP servers (TensorDock + Modal), GPU detection skills, and ML workflow subagents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Shubhankar", email = "reach2shubhankar@gmail.com" }]
keywords = ["claude-code", "claude-code-plugin", "mcp", "gpu", "tensordock", "modal", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp[cli]==1.2.0",
    "httpx==0.27.2",
]

[project.optional-dependencies]
modal = ["modal==0.74.5"]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "respx==0.21.1",
    "ruff==0.7.4",
    "bandit[toml]==1.7.10",
    "pip-audit==2.7.3",
]

[project.urls]
Homepage = "https://github.com/lonexreb/aish"
Repository = "https://github.com/lonexreb/aish"
Issues = "https://github.com/lonexreb/aish/issues"

[project.scripts]
aish-tensordock = "aish_mcp.tensordock_mcp_server:main"
aish-modal = "aish_mcp.modal_mcp_server:main"

[tool.setuptools]
# The plugin is invoked by Claude Code via .mcp.json — pip install is dev-only.
packages = ["aish_mcp"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S", "UP"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# detect.py uses `nvidia-smi` and `system_profiler` by name after a shutil.which
# guard. We trust PATH because the alternative (hardcoded absolute paths) breaks
# cross-distro compatibility. The `which` check is the security boundary.
"skills/gpu-detect/detect.py" = ["S603", "S607"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]

[tool.coverage.run]
source = ["aish_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
